# Compax-docs

./: 404.html  README.md  index.html  pyproject.toml  search.html  security_measures_and_authentication  technology_stack_used._for_backendmd
001_user_interface_design/: index.html
002_architecture/: index.html
003_technology_stack_used._for_backend/: index.html
004_api_endpoints/: index.html
005_security_measures_and_authentication/: index.html
007_development/: index.html
008_database_design_and_schema/: index.html
009_endpoints/: index.html
010_error_handling_and_logging/: index.html
011_testing/: index.html
011_testing_approaches_and_test_cases/: index.html
012_deployment/: index.html
012_deployment_instructions/: index.html
API_design_principles/: index.html
architecture/: index.html
database_design_and_schema/: index.html
deployment_instructions/: index.html
development_environment_setup/: index.html
docs/: 001_user_interface_design.md  002_architecture.md  003_technology_stack_used._for_backend.md  004_api_endpoints.md  005_security_measures_and_authentication.md  007_development.md  008_database_design_and_schema.md  009_endpoints.md  010_error_handling_and_logging.md  011_testing.md  011_testing_approaches_and_test_cases.md  012_deployment.md  012_deployment_instructions.md  API_design_principles.md  architecture.md  database_design_and_schema.md  deployment_instructions.md  development_environment_setup.md  endpoints.md  error_handling_and_logging.md  index.md  performance_optimization_techniques.md  system_design.md  (+3 more)
(+12 files in other folders)
