[tool.poetry]
name = "compax-docs"
version = "0.1.0"
description = "Documentation for the Compax API"
authors = ["blackprince001 <appiahboaduprince@gmail.com>"]
readme = "README.md"
packages = [{include = "compax_docs"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.docs.dependencies]
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.18"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
mkdocs-localsearch = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
